# mfmtools

./: .gitignore  BUILD.md  CMakeLists.txt  HISTORY.md  MANUAL.md  MFMTools.pro  README.md  aboutdlg.ui  converter.cpp  converter.h  diskparamsdlg.cpp  diskparamsdlg.h  diskparamsdlg.ui  loggerdlg.cpp  loggerdlg.h  loggerdlg.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  resources.qrc
.build/: build-linux.sh  build-macos.sh  build-win-i386.bat  build-win-latest.bat  vars-mingw-qt5.15.cmd  vars-mingw-qt5.6.cmd
.build/.linux/mfmtools.AppDir/usr/share/applications/: mfmtools.desktop
.build/linux/: AppRun  mfmtools.desktop
.build/linux/mfmtools.AppDir/usr/share/applications/: mfmtools.desktop
deploy/: COPYRIGHT.TXT  README.TXT  config.json  mfmtools.ini
deploy/languages/: app_en.qm  app_en.ts  app_ru.qm  app_ru.ts
libs/: config.h  crc16.c  crc16.h  disk_formats.cpp  disk_formats.h  hcombo.cpp  hcombo.h  loader.cpp  loader.h  loader_raw.cpp  loader_raw.h  loader_td0.cpp  loader_td0.h  lzss.c  lzss.h  mfm_formats.h  writer.cpp  writer.h  writer_mfm.cpp  writer_mfm.h  writer_raw.cpp  writer_raw.h
src/: CMakeLists.txt  aboutdlg.ui  converter.cpp  converter.h  diskparamsdlg.cpp  globals.h  globals.h.in  main.cpp  mainwindow.cpp  mainwindow.ui  resources.qrc
src/libs/: config.h  crc16.c  crc16.h  hcombo.cpp  hcombo.h  loader_raw.h  loader_td0.cpp  loader_td0.h  lzss.h  mfm_formats.h  writer.cpp  writer.h  writer_mfm.cpp  writer_mfm.h  writer_raw.cpp  writer_raw.h
src/translations/: app_en.ts  app_ru.ts
